# DFA-Learning-Toolkit

./: .gitignore  CONTRIBUTING.md  README.md  TimingsTesting.txt  main.go
CPP/: Build.bat  BuildAndGetHTML.bat  CMakeLists.txt  CopyFromMinSizeRel.bat  CopyFromRelease.bat  GetHTML.bat  setup.py
CPP/docs/: DFA_Toolkit.rst  GetHTML.bat  conf.py  index.rst
CPP/docs/_build/doctrees/: DFA_Toolkit.doctree  environment.pickle  index.doctree
CPP/docs/_build/doctrees/_generate/: DFA_Toolkit.DFA.addState.doctree  DFA_Toolkit.DFA.describe.doctree  DFA_Toolkit.DFA.doctree  DFA_Toolkit.DFA.getAcceptingStates.doctree  DFA_Toolkit.GetListOfStringsFromFile.doctree  DFA_Toolkit.GetPTAFromListOfStrings.doctree  DFA_Toolkit.State.doctree  DFA_Toolkit.StateStatus.doctree  DFA_Toolkit.String.doctree  (+1 more)
CPP/docs/_build/html/: .buildinfo  DFA_Toolkit.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
CPP/docs/_generate/: DFA_Toolkit.DFA.addState.rst  DFA_Toolkit.DFA.rst  DFA_Toolkit.GetListOfStringsFromFile.rst  DFA_Toolkit.GetPTAFromListOfStrings.rst  DFA_Toolkit.StateStatus.rst
CPP/source/module/: DFA.cpp  DFA.h
CPP/vsstudio/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DFA-Toolkit.sln  DFA_Toolkit.vcxproj  DFA_Toolkit.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  generate_vs2019.bat
CPP/vsstudio/DFA_Toolkit.dir/MinSizeRel/: DFA_Toolkit.cp38-win_amd64.pyd.recipe
CPP/vsstudio/MinSizeRel/: DFA_Toolkit.cp38-win_amd64.pyd  DFA_Toolkit.exp  DFA_Toolkit.lib
GO/: go.mod  main.go
(+200 files in other folders)
